<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">HelloConnections</string>

    <string name="strategy_prompt">select a strategy</string>
    <string-array name="strategy_array">
      <item>P2P_POINT_TO_POINT</item>
      <item>P2P_CLUSTER</item>
      <item>P2P_STAR</item>
    </string-array>

    <string-array name="advertising_options_array">
        <item>Auto-Upgrade Bandwidth</item>
        <item>Enforce Topology Constraints</item>
        <item>Enable Bluetooth</item>
        <item>Enable BLE</item>
        <item>Use Low Power Mode</item>
        <item>Use Fast Advertisements</item>
        <item>Enable WiFi LAN</item>
        <item>Enable NFC</item>
        <item>Enable WiFi Aware</item>
        <item>Enable Web RTC</item>
        <item>Enable USB</item>
        <item>Out of Band BT</item>
        <item>Out of Band BLE</item>
    </string-array>

    <string-array name="discovery_options_array">
        <item>Forward Unrecognized Bluetooth Devices</item>
        <item>Enable Bluetooth</item>
        <item>Enable BLE</item>
        <item>Use Low Power Mode</item>
        <item>Discover Fast Advertisements</item>
        <item>Enable WiFi LAN</item>
        <item>Enable NFC</item>
        <item>Enable WiFi Aware</item>
        <item>Enable USB</item>
        <item>Out of Band BT</item>
        <item>Out of Band BLE</item>
    </string-array>

    <string name="spinner_connections_strategy">Strategy</string>
    <string name="edit_text_endpoint_name">Endpoint Name</string>
    <string name="switch_advertise">Advertise</string>
    <string name="label_advertising_options">Advertising Options</string>
    <string name="switch_discover">Discover</string>
    <string name="label_discovery_options">Discovery Options</string>
    <string name="label_connection_options" translatable="false">Connection Options</string>

    <string name="button_connect">Connect</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_accept">Accept</string>
    <string name="button_reject">Reject</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_done">Done</string>

    <string name="text_view_send">Send</string>
    <string name="edit_text_payload_default_size">32</string>
    <string name="text_view_payload_size_unit">KB</string>
    <string name="button_send_bytes">BYTES</string>
    <string name="button_send_file">FILE</string>
    <string name="button_send_stream">STREAM</string>

    <string name="payload_transfer_description_percentage">%1$d%%</string>
    <string name="payload_transfer_description_bytes_transferred_size_known">%1$d/%2$d bytes transferred.</string>
    <string name="payload_transfer_description_bytes_transferred_size_unknown">%1$d bytes transferred.</string>
    <string name="payload_transfer_description_payload_id" translatable="false">Payload ID: %1$s</string>
    <string name="payload_transfer_description_status_in_progress">IN PROGRESS</string>
    <string name="payload_transfer_description_status_success">SUCCESS</string>
    <string name="payload_transfer_description_status_failure">FAILURE</string>
    <string name="payload_transfer_description_status_canceled">CANCELED</string>
    <string name="payload_transfer_description_status_unknown">UNKNOWN</string>

    <string name="message_permission_not_granted">Permission not granted.</string>

    <string name="error_toast_cannot_start_advertising">Cannot start advertising: <xliff:g id="error_message">%1$s</xliff:g>.</string>
    <string name="error_toast_cannot_start_discovery">Cannot start discovery: <xliff:g id="error_message">%1$s</xliff:g>.</string>
    <string name="error_toast_cannot_send_connection_request">Cannot send connection request: <xliff:g id="error_message">%1$s</xliff:g>.</string>
    <string name="error_toast_cannot_accept_connection_request">Cannot accept connection request: <xliff:g id="error_message">%1$s</xliff:g>.</string>
    <string name="error_toast_cannot_reject_connection_request">Cannot reject connection request: <xliff:g id="error_message">%1$s</xliff:g>.</string>
    <string name="error_toast_cannot_send_file_payload">Cannot send file payload to the device(s).</string>
    <string name="error_toast_rejected_by_remote_device">Rejected by remote device: [<xliff:g id="remote_device_name">%1$s</xliff:g>].</string>
    <string name="error_toast_remote_device_disconnected">Remote device [<xliff:g id="remote_device_name">%1$s</xliff:g>] disconnected. \nStop all transferring with this device.</string>
    <string name="error_toast_cannot_create_payload">Unable to create payload of type %1$d.</string>
    <string name="error_toast_out_of_band_ble_not_supported">Out of band BLE connecting is only supported after Android L.</string>
</resources>

