<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/text_view_send"
          style="@style/HeaderTextStyle" />

      <EditText
          android:id="@+id/size"
          android:layout_width="72dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:gravity="end"
          android:imeOptions="actionDone"
          android:inputType="number"
          android:text="@string/edit_text_payload_default_size"
          tools:ignore="LabelFor"
          style="@style/HeaderTextStyle" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/text_view_payload_size_unit"
          style="@style/HeaderTextStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <Button
          android:id="@+id/send_bytes"
          android:text="@string/button_send_bytes"
          style="@style/ButtonStyle" />

      <Button
          android:id="@+id/send_file"
          android:text="@string/button_send_file"
          style="@style/ButtonStyle" />

      <Button
          android:id="@+id/send_stream"
          android:text="@string/button_send_stream"
          style="@style/ButtonStyle" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/payload_transfers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

</LinearLayout>
