<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <!-- Controls -->
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="16dp"
          android:background="@android:color/background_light"
          android:elevation="4dp"
          android:keepScreenOn="true"
          android:orientation="vertical">

        <!-- Strategy -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:labelFor="@+id/strategySpinner"
              android:text="@string/spinner_connections_strategy"
              style="@style/HeaderTextStyle" />
          <Spinner
              android:id="@id/strategySpinner"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:spinnerMode="dropdown"
              android:entries="@array/strategy_array"
              android:prompt="@string/strategy_prompt" />
        </LinearLayout>

        <!-- Endpoint Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">
          <TextView
              android:id="@+id/endpointNameLabel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:labelFor="@+id/endpointName"
              android:text="@string/edit_text_endpoint_name"
              style="@style/HeaderTextStyle" />
          <EditText
              android:id="@id/endpointName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:imeOptions="actionDone" />
        </LinearLayout>

        <!-- Advertising -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:labelFor="@+id/advertiseSwitch"
              android:text="@string/switch_advertise"
              style="@style/HeaderTextStyle" />
          <Switch
              android:id="@id/advertiseSwitch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false" />
          <ImageButton
              android:id="@+id/advertisingOptions"
              android:layout_width="24dp"
              android:layout_height="24dp"
              android:background="@mipmap/ic_settings"
              android:src="?android:attr/selectableItemBackground"
              android:contentDescription="@string/label_advertising_options" />
        </LinearLayout>

        <!-- Discovery -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:labelFor="@+id/discoverSwitch"
              android:text="@string/switch_discover"
              style="@style/HeaderTextStyle" />
          <Switch
              android:id="@id/discoverSwitch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false" />
          <ImageButton
              android:id="@+id/discoveryOptions"
              android:layout_width="24dp"
              android:layout_height="24dp"
              android:background="@mipmap/ic_settings"
              android:src="?android:attr/selectableItemBackground"
              android:contentDescription="@string/label_discovery_options" />
        </LinearLayout>
      </LinearLayout>

      <!-- Device List -->
      <android.support.v7.widget.RecyclerView
          android:id="@+id/devices"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:scrollbars="vertical" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
